--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ markdown:	kramdown
 permalink:	/blog/:title
 
 # Setup
-title:            Thinny
+title:            Fan
 tagline:          'blog'
 description:      'My personal blog.'
-url:              http://camporez.github.io
+url:              http://jamienie.github.io
 baseurl:          
 commentsystem:    google
 disqus:           example
